---
title: Nexora — ERD (16 user stories)
---
erDiagram
    USERS ||--o{ URENREGISTRATIES : "registreert"
    USERS ||--o{ CLIENT_CAREGIVERS : "is begeleider"
    CLIENTS ||--o{ URENREGISTRATIES : "ontvangt zorg in"
    CLIENTS ||--o{ CLIENT_CAREGIVERS : "heeft begeleiders"

    USERS {
        bigint id PK
        string name
        string email UK
        string password
        string role "zorgbegeleider, teamleider"
        string dienstverband "intern, extern, zzp"
        boolean is_active
        datetime email_verified_at
        string remember_token
        datetime created_at
        datetime updated_at
    }

    CLIENTS {
        bigint id PK
        string voornaam
        string achternaam
        string bsn UK
        date date_of_birth
        string address
        string phone
        string email
        text notes
        string status "actief, wachtlijst, inactief"
        string care_type "WMO, WLZ, JW"
        datetime created_at
        datetime updated_at
        datetime deleted_at "soft delete"
    }

    CLIENT_CAREGIVERS {
        bigint id PK
        bigint client_id FK
        bigint user_id FK
        string role "primair, secundair, tertiair"
        datetime created_at
        datetime updated_at
    }

    URENREGISTRATIES {
        bigint id PK
        bigint user_id FK "zorgbegeleider"
        bigint client_id FK
        date datum
        time start_tijd
        time eind_tijd
        decimal uren
        string omschrijving
        string status "concept, ingediend, goedgekeurd, afgekeurd"
        text teamleider_notitie
        datetime created_at
        datetime updated_at
    }

    PASSWORD_RESET_TOKENS {
        string email PK
        string token
        datetime created_at
    }
